# ManipulationPlanning-SI-RRT

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  docker-compose.yml  install.sh  requirements.txt  scene_task.json
Blender/robots/xarm6/: xarm6.blend  xarm6cyl.urdf
Blender/scenes/: scene_task.json  scene_task_flying_boxes.json
Blender/scenes with animation/: drgbt_logs_flying_boxes.json  drgbt_logs_multiple_robot_on_table.json  mass test 1 50 boxes drgbt RGBTStar.json  mass test 1 50 boxes drgbt.json  mass_test_strrt_logs.json  strrt_logs_flying_boxes.json  strrt_logs_multiple_robot_on_table.json
Blender/scripts/: add_random_cube.py  animate_multiagent.py  animate_obstacles.py  animate_path.py  build_video.py  create_single_test_spheres.py  export_data_to_json.py  export_data_to_json_multirobot.py  generate_mass_test.py  generate_mass_test_spheres.py  load_scene_from_json.py  visualise_mass_test.py  visualise_one_test.py
Blender/urdf_importer/: import_urdf.py  import_urdf_operator.py
MSIRRT/: CMakeLists.txt  Makefile  saffe_int_vis.ipynb
MSIRRT/include/: Planner.hpp  PlannerConnect.hpp  Tree.hpp  Vertex.hpp
MSIRRT/src/: Planner.cpp  PlannerConnect.cpp  Tree.cpp  Vertex.cpp  benchmark_broadphase.cpp  get_safe_intevals_by_path.cpp  main.cpp
STRRT/: drgbt_config.json  mass_test.json  scene_task flying box.json  scene_task.json  scene_task_multiple_robots.json  strrt_config.json  strrtstar.ipynb
STRRT/STRRT_eval/: evaluate_blender_scene.py
STRRT_Planner/: CMakeLists.txt  Makefile
STRRT_Planner/include/CollisionManager/: CollisionManager.hpp  CubeObstacleFCL.hpp  ObjectObstacleFCL.hpp  RobotObstacleFCL.hpp  SphereObstacleFCL.hpp
STRRT_Planner/include/OMPLValidators/: SpaceTimeMotionValidator.hpp  StateValidityCheckerFunctor.hpp
STRRT_Planner/include/config_read_writer/: CubeObstacleJsonInfo.hpp  DRGBTConfigReader.hpp  ObstacleJsonInfo.hpp  ObstaclePosWriter.hpp  ResultsWriter.hpp  RobotObstacleJsonInfo.hpp  STRRTConfigReader.hpp  SphereObstacleJsonInfo.hpp  config_read.hpp
STRRT_Planner/src/: main.cpp
STRRT_Planner/src/CollisionManager/: CMakeLists.txt  CollisionManager.cpp  CubeObstacleFCL.cpp  ObjectObstacleFCL.cpp  RobotObstacleFCL.cpp  SphereObstacleFCL.cpp
STRRT_Planner/src/OMPLValidators/: CMakeLists.txt  SpaceTimeMotionValidator.cpp  StateValidityCheckerFunctor.cpp
STRRT_Planner/src/config_read_writer/: CMakeLists.txt  CubeObstacleJsonInfo.cpp  DRGBTConfigReader.cpp  ObstacleJsonInfo.cpp  ObstaclePosWriter.cpp  ResultsWriter.cpp  RobotObstacleJsonInfo.cpp  STRRTConfigReader.cpp  SphereObstacleJsonInfo.cpp  config_read.cpp
STRRT_Planner/src/util_executables/: check_scene.cpp
docker/blender/: Dockerfile
docker/mdp_debug/: Dockerfile
docker/mdp_release/: Dockerfile
docker/mdp_release_minimal/: Dockerfile
docs/: installation_dependencies.md
mass_test/: clean_experiments.py  do_mass_test.py  final_analysis.ipynb
multiagent_eval/: clean_experiments.py  create_mass_test.py  create_mass_test_multithread.py  do_cross_test_multithread.py  do_mass_test round robin.py  do_mass_test.py  do_mass_test_multithread.py  do_mass_test_round_robin.py  final_analysis.ipynb  main.py
